# hyprnote

./: package.json  pnpm-lock.yaml
apps/desktop/src-tauri/icons/nightly/: icon.icns
apps/desktop/src/components/chat/: header.tsx  index.tsx  input.tsx  interactive.tsx  trigger.tsx  view.tsx
apps/desktop/src/components/chat/body/: empty.tsx  index.tsx
apps/desktop/src/components/main/body/: index.tsx  search.tsx  shared.tsx
apps/desktop/src/components/onboarding/: calendar.tsx  permissions.tsx  shared.tsx  welcome.tsx
apps/desktop/src/components/settings/memory/: custom-vocabulary.tsx
apps/desktop/src/routes/: app.tsx
apps/desktop/src/routes/app/main/: _layout.index.tsx
apps/desktop/src/routes/app/onboarding/: index.tsx
apps/desktop2/: package.json
apps/desktop2/src-tauri/capabilities/: default.json
apps/desktop2/src-tauri/src/: lib.rs
apps/desktop2/src/components/main/: left-sidebar.tsx  main-area.tsx
apps/desktop2/src/tinybase/store/: persisted.ts
apps/web/src/: routeTree.gen.ts
apps/web/src/components/: download-button.tsx
apps/web/src/routes/: auth.tsx
apps/web/src/routes/_view/: index.tsx  pricing.tsx  route.tsx
apps/web/src/routes/_view/download/: apple-silicon.tsx  index.tsx
plugins/tray/: Cargo.toml  build.rs
plugins/tray/js/: bindings.gen.ts
plugins/tray/permissions/: default.toml
plugins/tray/permissions/autogenerated/: reference.md
plugins/tray/permissions/autogenerated/commands/: set_app_icon.toml
plugins/tray/permissions/schemas/: schema.json
plugins/tray/src/: commands.rs  ext.rs  lib.rs
(+11 files in other folders)
