[package]
name = "tauri-plugin-tray"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-tray"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-local-stt = { workspace = true }
tauri-plugin-misc = { workspace = true }
tauri-plugin-windows = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-foundation = { workspace = true }

[features]
default = []
v0 = ["tauri-plugin-windows", "tauri-plugin-windows/v0"]
v1 = ["tauri-plugin-windows", "tauri-plugin-windows/v1"]
